# teaching_utils

./: .gitignore  README.md  env_sample  pyproject.toml  workspace.toml
.github/workflows/: build-documentation.yml  python-package.yml
bases/teaching_utils/teaching_lib/: __init__.py  code_tester.py  form_data_reader.py  gtest_utils.py  notebook.py  repository.py  submission_utils.py  submissions.py  test_utils.py  text_utils.py
components/teaching_utils/config/: __init__.py  core.py
components/teaching_utils/ghrepos/: __init__.py  core.py
components/teaching_utils/testing/: __init__.py  core.py
development/: algav.py  auto_grade.py  ed.py  generate_code_analysis.py  generate_cross_testing_report.py  generate_grading_csv.py  generate_grading_feedback.py  generate_grading_feedback_v2.py  givd.py  sample_test_code.py  sd.py
docs/source/: conf.py  index.rst
docs/source/_autosummary/: teaching_utils.rst
resources/docker/gcc-gtest/: Dockerfile
test/bases/teaching_utils/teaching_lib/: test_core.py
test/components/teaching_utils/config/: test_core.py
test/components/teaching_utils/ghrepos/: test_core.py
test/components/teaching_utils/testing/: test_core.py
