[tool.poetry]
name = "teaching-utils"
version = "0.1.0"
description = "Utilities for teaching"
authors = ["Xavier Baró <xbaro@ub.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xbaro/teaching_utils"
repository = "https://github.com/xbaro/teaching_utils"
packages = [
    {include = "teaching_utils/teaching_lib",from = "bases"},
    {include = "teaching_utils/config", from = "components"},
    {include = "teaching_utils/ghrepos", from = "components"},
    #{include = "teaching_utils/testing", from = "components"},
    {include = "development"},
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
pygithub = "^2.3.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
pytest = "^8.2.2"
pylint = "^3.3.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv",
]

[tool.pylint]
max-line-length = 120