[project]
name = "teaching-utils"
version = "0.1.0"
description = "Utilities for teaching"

[tool.poetry]
name = "teaching-utils"
version = "0.1.0"
description = "Utilities for teaching"
authors = ["Xavier Baró <xbaro@ub.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xbaro/teaching_utils"
repository = "https://github.com/xbaro/teaching_utils"
packages = [
    {include = "teaching_utils/teaching_lib",from = "bases"},
    {include = "teaching_utils/config", from = "components"},
    {include = "teaching_utils/ghrepos", from = "components"},
    #{include = "teaching_utils/testing", from = "components"},
    {include = "development"},
    {include = "teaching_utils/testing",from = "components"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pygithub = "^2.3.0"
python-dotenv = "^1.0.1"
ollama = { version = "^0.4.7", optional = true }
sphinx = { version = "^8.1.3", optional = true }
sphinx-rtd-theme = { version = "^3.0.2", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinx-pyproject = { version = "^0.3.0", optional = true }
nbclient = { version = "^0.10.2", optional = true }
jupyterlab = { version = "^4.3.4", optional = true }
ipython = { version = "^8.31.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-pyproject"]
nb = ["nbclient", "jupyterlab", "ipython"]
ollama = ["ollama"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
pytest = "^8.2.2"
pylint = "^3.3.1"

[tool.poetry.requires-plugins]
poetry-multiproject-plugin = ">=1.8.3"
poetry-polylith-plugin = ">=1.35.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv",
]

[tool.pylint]
max-line-length = 120

[tool.sphinx-pyproject]
extensions = [
    'sphinx.ext.autodoc',
]
package_root = "teaching_utils"
#include_patterns = [
#    '**'
#]

